--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <html>
-<head></head>
+<head>
+  <script src="myCode.js"></script>
+</head>
 <body>
-<h1>TEMPLATE</h1>
+  <h1>TEMPLATE</h1>
+
+  Airport Code:<br/><input type="text" id="airport"/>
+  <button onClick="get_airport();">Submit</button><br/><br/>
+
+  Here are the flights currently available...<br/>
+    <div id="flights"></div><br/><br/>
+
+  Choose your destination:<br/><input type="text" id="destination"/>
+  <button onClick="get_destination();">Submit</button><br/><br/>
+
+  How will my sunset be?<br/><br/>
+  <div id="weatherInfo"></div>
 
 </body>
 </html>
